--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <meta name="description" content="A temperature converter">
      <meta name="author" content="Mustafë Ismajli">
      <link rel="stylesheet" href="./style.css">
+     <script src="./script.js"></script>
      <title>Document</title>
 </head>
 
