Adding the final changes to the project

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
                     &deg;F to &deg;C
                </label>
                <br>
-               <input type="number" placeholder="Enter the temperature in celsius" required />
-               <span id="unit"> &deg;C</span>
-               <br><br>
+               <div class="input">
+                    <input type="number" placeholder="Enter the temperature in celsius" required />
+                    <span id="unit"> &deg;C</span>
+               </div>
+               <br>
                <button id="convertBtn" name="btn" type="submit">
                     Convert
                </button>
